--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
+    "clear-rate-limits": "ts-node src/scripts/clearRateLimits.ts",
     "test": "echo \"No tests defined\" && exit 0"
   },
   "keywords": [],
