--- a/render.yaml
+++ b/render.yaml
@@ -4,13 +4,14 @@ services:
     name: taskforce-backend
     env: node
     plan: starter
-    buildCommand: cd backend && npm ci && npm run build
+    buildCommand: cd backend && npm ci && npx prisma generate && npm run build && npx prisma migrate deploy
     startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: "4000"
+        sync: false
+        # Render will automatically set PORT, but you can override if needed
       - key: DATABASE_URL
         fromDatabase:
           name: taskforce-db
@@ -45,9 +46,17 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: "3000"
       - key: NEXT_PUBLIC_API_URL
         sync: false
+        # Set to your backend URL: https://taskforce-backend.onrender.com
+        # Or use fromService if Render supports it
+      - key: NEXT_PUBLIC_GOOGLE_CLIENT_ID
+        sync: false
+        # Should match GOOGLE_CLIENT_ID from backend
     healthCheckPath: /api/health
+    # Note: Next.js will handle /api/health route automatically
     autoDeploy: true
 
   # Redis Cache
