--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy || echo 'Migrations skipped - DATABASE_URL not set'",
     "prisma:studio": "prisma studio",
     "clear-rate-limits": "ts-node src/scripts/clearRateLimits.ts",
     "test": "echo \"No tests defined\" && exit 0"
