--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -3,7 +3,7 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copy package files
+# Copy package files (build context is webapp/ directory)
 COPY package*.json ./
 
 # Install dependencies
@@ -13,6 +13,13 @@ RUN npm ci
 COPY . .
 
 # Build Next.js app
+# Railway automatically passes environment variables as build args
+# We need to accept them and set them as ENV vars for Next.js build
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_OLLAMA_URL
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV NEXT_PUBLIC_OLLAMA_URL=${NEXT_PUBLIC_OLLAMA_URL}
+
 RUN npm run build
 
 # Production stage
@@ -30,8 +37,8 @@ RUN npm ci --only=production
 # Copy built files
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/next.config.js ./next.config.js
-# Create empty public directory (Next.js requires it, even if empty)
-RUN mkdir -p ./public
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/package.json ./package.json
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs && \
@@ -39,11 +46,11 @@ RUN addgroup -g 1001 -S nodejs && \
 
 USER nextjs
 
-EXPOSE 3001
+EXPOSE 3000
 
-# Health check
+# Health check (uses PORT env var)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3001', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+  CMD node -e "require('http').get('http://localhost:' + (process.env.PORT || 3000), (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 CMD ["npm", "start"]
 
