Fix backend Dockerfile to work with Railway root build context

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,15 +3,15 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-COPY prisma ./prisma/
+# Copy package files from backend directory (Railway builds from repo root)
+COPY backend/package*.json ./
+COPY backend/prisma ./prisma/
 
 # Install dependencies
 RUN npm ci
 
-# Copy source code
-COPY . .
+# Copy source code from backend directory
+COPY backend/ .
 
 # Generate Prisma client
 RUN npx prisma generate
@@ -24,18 +24,23 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Install production dependencies only
+# Install production dependencies including prisma for migrations
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci --only=production && npm install prisma --save
 
 # Copy built files and Prisma
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 
-# Create non-root user
+# Copy startup script
+COPY start.sh ./start.sh
+RUN chmod +x ./start.sh
+
+# Create non-root user and ensure it owns the app directory
 RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nodejs -u 1001
+    adduser -S nodejs -u 1001 && \
+    chown -R nodejs:nodejs /app
 
 USER nodejs
 
@@ -45,6 +50,7 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD wget --spider --quiet http://localhost:3000/health || exit 1
 
-CMD ["node", "dist/server.js"]
+# Use startup script that runs migrations then starts server
+CMD ["./start.sh"]
 
 
