--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.0.0",
     "googleapis": "^165.0.0",
     "ioredis": "^5.8.2",
     "pino": "^10.1.0",
