Use npm install instead of npm ci in Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,12 +20,8 @@ RUN if [ ! -f ./package.json ] && [ -f ./backend/package.json ]; then \
     fi
 
 # Install dependencies
-# Use npm install if package-lock.json doesn't exist, npm ci if it does
-RUN if [ -f ./package-lock.json ]; then \
-      npm ci; \
-    else \
-      npm install; \
-    fi
+# Use npm install instead of npm ci to handle missing/outdated lock files
+RUN npm install
 
 # Verify prisma directory exists
 RUN if [ ! -f ./prisma/schema.prisma ]; then \
