COMPLETE FIX: Prevent email encoding corruption (5-layer protection)
- Layer 1: Enhanced output sanitization in gmailDelivery & campaignEngine
- Layer 2: NEW backend template validation before database save
- Layer 3: NEW frontend template validation with user feedback
- Layer 4: NEW database cleanup script for existing corrupted templates
- Layer 5: NEW monitoring & alerting system for encoding issues

This ensures email gibberish NEVER happens again!

Key files:
- backend/src/utils/templateSanitizer.ts (NEW) - Validates & cleans templates
- backend/src/monitoring/encodingMonitor.ts (NEW) - Tracks encoding issues
- backend/src/scripts/cleanCorruptedTemplates.ts (NEW) - Cleanup script
- webapp/src/utils/templateValidation.ts (NEW) - Frontend validation
- Updated campaign creation flow to sanitize all templates
- Added 'npm run clean-templates' command to fix existing data

See ENCODING_FIX_COMPLETE.md for full documentation.

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
+    "clean-templates": "tsx src/scripts/cleanCorruptedTemplates.ts",
     "test": "echo \"No tests defined\" && exit 0"
   },
   "keywords": [],
