--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "bcryptjs": "^2.4.3",
     "bullmq": "^5.63.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -33,6 +34,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
