--- a/wallet-backend/railway.toml
+++ b/wallet-backend/railway.toml
@@ -3,7 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "node dist/server.js"
+# Use Dockerfile CMD instead of startCommand
 healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
